Use require-javadoc 2.0.0